# conky_scripts

./: .gitignore  CMakeLists.txt  CustomBar.qml  Makefile  default.nix  file-systems.txt  functions.lua  main.qml  package.nix  resources.qrc  shell.nix  telemetry.nix  workspace.code-workspace  ws_bridge.nix
.yazi/: yazi.toml
conf-available/: 1conky.conf  default.conf  pi.conf
conf-enabled/: default.conf  pi.conf
config/: config.lua  settings.lua
eww/: conky.scss  conky.yuck  eww.yuck
eww/helpers/: bar.yuck  header.yuck  proc-list.yuck  stacked-core-bar.yuck
eww/metrics/: avg_processinfo.yuck  core-bar.yuck  cpu-cores.yuck  detailed-core-bar.yuck  disk-io.yuck  disk-list.yuck  mem-swap.yuck  network.yuck  realtime-processinfo.yuck  sys-info.yuck
eww/windows/: conky.yuck  conky_fg.yuck  pi_remote.yuck  pi_remote_fg.yuck
includes/: batteryinfo.hpp  batteryinfo_json.hpp  batteryinfo_lua.hpp  cli_parser.hpp  colors.hpp  config_types.hpp  configuration_builder.hpp  conky_format.hpp  conky_output.hpp  context.hpp  controller.hpp  corestat.hpp  cpuinfo.hpp  data_local.hpp  data_ssh.hpp  diskstat.hpp  filesystems.hpp  format.hpp  frag_stats.hpp  hwmonitor.hpp  io.hpp  json_definitions.hpp  json_serializer.hpp  libwebsockets.hpp  load_avg.hpp  log.hpp  lua_generator.hpp  lua_metrics.hpp  lua_parser.hpp  lws_proxy.hpp  lws_server.hpp  meminfo.hpp  metric_settings.hpp  metrics.hpp  mock_context.hpp  mock_controller.hpp  networkstats.hpp  output_mode_conky.hpp  output_mode_json.hpp  parsed_config.hpp  (+28 more)
modules/conkyd/: .gitignore  Makefile  shell.nix
modules/conkyd/includes/: colors.hpp  conky_format.h  conky_output.hpp  conkyd.h  corestat.h  corestat.hpp  cpu_processes.hpp  cpuinfo.h  data.h  data.hpp  data_local.h  data_local.hpp  data_ssh.h  data_ssh.hpp  diskstat.hpp  filesystems.hpp  hwmonitor.hpp  json_definitions.hpp  load_avg.hpp  log.h  mem_processes.hpp  meminfo.h  metrics.hpp  networkstats.hpp  parser.hpp  pcn.hpp  polling.hpp  processinfo.hpp  provider.hpp  runner.hpp  ssh.h  ssh.hpp  swapinfo.h  sysinfo.hpp  uptime.hpp  waybar_cli_parser.hpp  waybar_formatters.h  waybar_formatters.hpp  waybar_types.h  widgets.h  (+1 more)
modules/conkyd/includes/logging/: debug.hpp
modules/conkyd/src/: conkyd.cpp  json.cpp  log.cpp  main.cpp  main.h  parser.cpp  runner.cpp  ssh.cpp  waybar.cpp
modules/conkyd/src/cli/: parser.cpp  parser.hpp
modules/conkyd/src/conky/: conky_format.cpp  conky_output.cpp
modules/conkyd/src/corestat/: corestat.cpp  corestat.h
modules/conkyd/src/cpuinfo/: cpuinfo.cpp  cpuinfo.h
modules/conkyd/src/data/: data.cpp  data.h  data_local.cpp  data_local.h  data_ssh.cpp  data_ssh.h  json_serialization.cpp  local.cpp  local.h  metrics.cpp  metrics.hpp
modules/conkyd/src/diskstat/: Makefile  config.txt  diskstat
modules/conkyd/src/diskstat/include/: conky_format.h  constants.h  device_info.h  disk_io.h  diskstat.h  mount_info.h  print_utils.h  size_format.h  types.h
modules/conkyd/src/diskstat/src/: conky_format.cpp  device_info.cpp  disk_io.cpp  diskstat.cpp  main.cpp  mount_info.cpp  print_utils.cpp  size_format.cpp
modules/conkyd/src/diskstat/src/stale/: debug.cpp  mounts.cpp
modules/conkyd/src/meminfo/: meminfo.cpp  meminfo.h
modules/conkyd/src/processinfo/: processinfo.cpp  processinfo.hpp
modules/conkyd/src/ssh/: ssh.cpp  ssh.h
modules/conkyd/src/swapinfo/: swapinfo.cpp  swapinfo.h
modules/conkyd/src/systeminfo/: corestat.cpp  cpu_processes.cpp  cpuinfo.cpp  diskstat.cpp  filesystems.cpp  hwmonitor.cpp  load_avg.cpp  mem_processes.cpp  meminfo.cpp  networkstats.cpp  processinfo.cpp  swapinfo.cpp  sysinfo.cpp  uptime.cpp
modules/conkyd/src/uptime/: uptime.cpp  uptime.h
modules/conkyd/src/waybar/: main.cpp  waybar_cli_parser.cpp  waybar_cli_parser.hpp  waybar_formatter.cpp  waybar_formatters.cpp  waybar_formatters.h  waybar_types.h
modules/conkyd/src/widgets/: main.cpp  widgets.cpp  window.cpp
qt/qml/: main.qml
qt/qml/helpers/: DefaultText.qml  MemoryBar.qml  MetricBar.qml  SectionHeader.qml
qt/qml/metrics/: BatteryInfo.qml  CoreStat.qml  DiskIO.qml  DiskUsage.qml  MemInfo.qml  NetworkInfo.qml  StabilityInfo.qml  SystemInfo.qml  TopCPUProcesses.qml  TopMemProcesses.qml
qt/qml/windows/: Splash.qml  Telemetry.qml
src/: cli_parser.cpp  controller.cpp  json.cpp  lua_parser.cpp  main.cpp  parsed_config.cpp  parser.cpp  qt_main.cpp  runner.cpp  ssh.cpp  teebuf.cpp  telemetry.cpp  waybar.cpp  ws_server.cpp
src/conky/: conky_format.cpp  conky_output.cpp  conky_pipeline.cpp
src/core/: cli_parser.cpp  configuration_builder.cpp  controller.cpp  lua_generator.cpp  lua_metrics.cpp  lua_parser.cpp  metric_settings.cpp  parsed_config.cpp  runner.cpp  runner_context.cpp  telemetry.cpp  window_settings.cpp
src/data/: data.cpp  data_direct.cpp  data_local.cpp  data_ssh.cpp  metrics.cpp  polling.cpp  ssh.cpp
src/gtk_widgets/: gtk_widgets.cpp  main.cpp  window.cpp
src/json/: json_definitions.cpp  json_main.cpp  json_pipeline.cpp  json_serializer.cpp
src/libwebsockets/: lws_lua_config.hpp  lws_main.cpp  lws_pipeline.cpp  lws_proxy.cpp  lws_server.cpp
src/logging/: io.cpp  log.cpp  rotate_file_sync.cpp  teebuf.cpp
src/qt_widgets/: main.cpp  qt_main.cpp  qt_pipeline.cpp
src/sockets/: tcp.cpp
src/systeminfo/: batteryinfo.cpp  corestat.cpp  cpuinfo.cpp  diskstat.cpp  filesystems.cpp  frag_stats.cpp  hwmonitor.cpp  load_avg.cpp  meminfo.cpp  networkstats.cpp  processinfo.cpp  sysinfo.cpp  system_stability.cpp  uptime.cpp
src/waybar/: waybar_formatters.cpp
src/websockets/: ws_main.cpp
src/widgets/: widgets.cpp
tests/: lws_reactor_test.cpp  main.cpp  unit_corestat.cpp  unit_frag_stats.cpp  unit_json_definitions.cpp  unit_json_order.cpp  unit_lua_generator.cpp  unit_lws_main.cpp  unit_lws_proxy.cpp  unit_process_io.cpp  unit_stability.cpp
